# POLYFORGE

./: .env.example  .gitignore  .wsl_env  ARCHITECTURE.md  CONTACT_TEMPLATES.md  CONVENTIONS.md  Dockerfile  FINAL_PITCH.md  FINAL_RUN_RESULTS.md  OUTREACH_GUIDE.md  QUICKSTART.md  README.md  README_ORACLE.md  README_PROVENANCE.md  _  aider.chat.history.OLD.md  c  check_model_alias.py  clang_evaluator.py  cuda_parser.py  demo_offline.py  disassemble_test.py  discovery_agent.py  discrimination_test.py  evaluate_phase3.py  evaluate_phase3_clean.py  fix_agent.py  generate_data.py  generate_real_data.py  gnn_model.py  grow_compiler.py  index.html  landing.html  list_models.py  mock_llm_server.py  mock_rules_phase2.json  package-lock.json  package.json  parallel_oracle_whitepaper.tex  patch_build_makefile.py  (+28 more)
aider_env/: pyvenv.cfg
data/: hardware_facts.arch2.json  hardware_facts.fictional_gpu.json  hardware_facts.vortex.json  hardware_facts.vortex_wide.json  rules.fireworks.json  rules.json  rules_test.json
docs/: CONVENTIONS.md  README_ORACLE.md  TROUBLESHOOTING.md  source_target_status.md  vortex_sim_integration.md
examples/: demo_boundaries.ir  demo_loop_and_replace.ir  demo_mixed_arch_lift.ir  demo_program.ir  demo_program_full.ir  doom_raycaster.cu  full_integration_test.ir  mandelbrot_shader.cu  strength_reduction_test.ir  vectorAdd.cu
kernels/: conditional_scatter.py  strided_reduction.py
oracle_examples/: reduction.json  saxpy.json  war_race.json
prompts/: compare_rules.txt  extract_rule.txt  generate_candidate.txt  summarize_failure.txt
scratch/: fault_injection_test.py  fix.py  fix10.py  fix11.py  fix2.py  fix3.py  fix4.py  fix5.py  fix6.py  (+7 more)
(+34 files in other folders)
