[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "parallel-oracle"
version = "0.1.0"
description = "Race-detecting oracle for custom parallel hardware compilers. Discovers data races (RAW, WAW, WAR) in parallel kernels using empirically-discovered hardware facts."
readme = "README_ORACLE.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["parallel", "oracle", "race-detection", "RISC-V", "GPU", "compiler"]
authors = [{name = "Hackathon Project"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
]

[project.scripts]
parallel-oracle = "oracle_standalone:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oracle_standalone*"]
