[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polyforge"
version = "0.1.0"
description = "POLYFORGE — Universal parallel kernel compiler. Any CUDA kernel, any hardware, verified."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["parallel", "oracle", "race-detection", "RISC-V", "GPU", "compiler"]
authors = [{name = "Hackathon Project"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
]

[project.scripts]
polyforge = "oracle_standalone:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oracle_standalone*"]
